plot over network

--- a/docs/evaluation.tex
+++ b/docs/evaluation.tex
@@ -2,12 +2,12 @@
 
 With the eventual growth of the Lightning Network a fee market for channel liquidity will emerge. How routing nodes 
 
-Lightning network as a graph
-
-Fee price in a competitive equlibirum.
+\section{Lightning network as a graph}
 
 
-Fee as a competitive equilibrium 
+
+
+\section{Fee as a competitive equilibrium}
 
 
 
@@ -23,7 +23,7 @@ Fee as a competitive equilibrium
 
 
 
-The cost of procuring a shortest path between s and d might be unequal for two different routing nodes dependent on already existing paths and set policies
+The cost of procuring a shortest path between s and d might be unequal for two different routing nodes dependent on already existing paths and set policies.
 
 \section{Pricing function}
 
@@ -70,6 +70,24 @@ aoeu oaeu oeau thnoeutnhoeuaththe thoaeutheoua
 aoeu h
 coeauueuoae uoeua croeaghc oeauh eoucreou chregoucr 
 coraeugcrg ecuogcroeug e auoe craoecucgcr aoecug ceoeau 
+
+
+\newpage
+\onecolumn
+\begin{figure}[!htb]
+	\hspace*{-0.7cm} 
+	\centering
+	\includegraphics[width=12cm]{testnet_force.png}
+	\vspace*{-0.4cm} 
+	\includegraphics[width=13.6cm]{mainnet_force3.png}
+	\caption{\textit{
+		Shows testnet above and mainnet below as of 2019-02-25. Node size corresponds to degree, larger degrees to larger size. Positioning is a mix between Force Atlas and Fruchterman Raingold. Network data retrieved by running a c-lightning node and visualized with Gephi\cite{repository:gephi}.}}
+	\label{fig:equilibrium}
+	\hspace*{2mm} 	
+\end{figure}
+\newpage
+\twocolumn
+
 
 % THE ADJUSTABLE SCALE FREE  http://www.uvm.edu/pdodds/files/papers/others/2002/holme2002a.pdf
 
