--- a/docs/references.bib
+++ b/docs/references.bib
@@ -538,17 +538,21 @@ TOR, reverse govern-print mention
 	publiser = "Distributed Computing Group, ETH Zurich"
 }
 
-%scale
-
 @misc{donald:scale,
 	title = {Re: Bitcoin P2P e-cash paper},
 	author = {Donald, James A.},
 	howpublished = { \url{https://www.mail-archive.com/cryptography@metzdowd.com/msg09963.html} },
-	issue_date = {14 january 2016 DRAFT Version 0.5.9.2},
 	year = 2008,
 }
 
-
+@misc{hearn:classic,
+	title = {Why is bitcoin forking},
+	author = {Hearn, Mike},
+	howpublished = { \url{https://medium.com/faith-and-future/why-is-bitcoin-forking-d647312d22c1} },
+	month = "august",
+	day = "15",
+	year = 2015,
+}
 
 % Lightning 
 
@@ -628,6 +632,14 @@ year = "",
 	month = "October",
 	year = "1999",
 	page = "509-512"
+}
+
+@misc{
+	repository:gephi,
+	author = {},
+	title = "Gephi",
+	howpublished = {
+	\url{https://github.com/gephi/gephi}},
 }
 
 % Game Theory 
