--- a/docs/thesis/bitcoin.tex
+++ b/docs/thesis/bitcoin.tex
@@ -10,7 +10,7 @@ Part of the solution is provided by one way asymmetric encryption utilizing the 
 \begin{figure}[!htb]
 
 	\centering
-	\includegraphics[width=6cm]{transaction.png}
+	\includegraphics[width=6cm]{images/transaction.png}
 	\caption{\textit{A simplified illustration of two transactions. 
 	}}
 	\label{fig:two:tx}
@@ -29,7 +29,7 @@ The \textit{Proof-of-work} algoithm is directly tied into the bitcoin transactio
 \begin{figure}[!htb]
 	\hspace*{-0.4cm} 
 	\centering
-	\includegraphics[width=10cm]{blockchain.png}
+	\includegraphics[width=10cm]{images/blockchain.png}
 	\caption{\textit{Three blocks linked by the hash of the previous block's header. Only the content in the header is immutable without redoing the \textit{Proof-of-work}.
 	}}
 	\label{fig:blockchain}
@@ -43,7 +43,7 @@ The 'work' part of the algorithm is to find a sufficiently small hash of the pre
 \begin{figure}[!htb]
 	
 	\centering
-	\includegraphics[width=7cm]{merkle.png}
+	\includegraphics[width=7cm]{images/merkle.png}
 	\caption{\textit{A merkle tree resulting from four transactions A, B, C, D.
 	}}
 	\label{fig:merkle:tree}
