--- a/docs/thesis/macroeconomics.tex
+++ b/docs/thesis/macroeconomics.tex
@@ -58,7 +58,7 @@ could be minted in very small amounts.
 \begin{figure}[!htb]
 
 	\centering
-	\includegraphics[width=7cm]{PrivateBankNoteStockholmEnskildaBank1876.JPG}
+	\includegraphics[width=7cm]{external/PrivateBankNoteStockholmEnskildaBank1876.JPG}
 	\caption{\textit{The private bank 'Stockholms Enskilda Bank'(SEB) issued bearer
 	promissory note. It promises to pay 10 crowns to the bearer upon demand in gold. 
 	The exchange rate as per the Scandinavian Convention(Sweden, Denmark 27 may 1873, Norway 1 april 1877)\cite{nordic:crown}
@@ -117,7 +117,7 @@ The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon c
 
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=16cm]{gold-price.png}
+	\includegraphics[width=16cm]{external/gold-price.png}
 	\caption{\textit{The relation of major currencies against its value in gold since the end of the Bretton Woods agreement to
 			today. The graph is composed with data from the World Gold Council\cite{world:gold:council}. 
 	}}
