--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -551,7 +551,14 @@ TOR, reverse govern-print mention
 	howpublished = { \url{https://medium.com/faith-and-future/why-is-bitcoin-forking-d647312d22c1} },
 	month = "august",
 	day = "15",
-	year = 2015,
+	year = "2015",
+}
+
+@misc{coin:dance,
+	title = {coin.dance},
+	author = {},
+	howpublished = { \url{https://coin.dance/} },
+	year = "2019",
 }
 
 % Lightning 
