--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -50,8 +50,8 @@ One of the earliest attempts to increase the block size was when node Bitcoin XT
 \begin{figure}[!htb]
 	\hspace*{-0.7cm} 
 	\centering
-	\includegraphics[width=8cm]{Bitcoin_XT_Nodes.png}
-	\caption{\textit{Historic Bitcoin XT node count. As of 2019-02-25 only 3 nodes is still active. Data retrieved from coin.dance.}}
+	\includegraphics[width=8cm]{external/Bitcoin_XT_Nodes.png}
+	\caption{\textit{Historic Bitcoin XT node count. As of 2019-02-25 only 3 nodes are still active. Data retrieved from coin.dance\cite{coin:dance}.}}
 	\label{fig:equilibrium}
 	\hspace*{2mm} 	
 \end{figure}
