--- a/docs/thesis/problem.tex
+++ b/docs/thesis/problem.tex
@@ -1,8 +1,9 @@
-\subsection{Background}
+\chapter{Problem Description}
+
+\section{Background}
     \label{sec:background}
 
-
-\subsection{Aim}
+\section{Aim}
     \label{sec:aim}
 
 This thesis aim to address following three questions:
@@ -16,7 +17,7 @@ This thesis aim to address following three questions:
 		incentivized rebalancing using discounts?
     \end{enumerate}
 
-\subsection{Related work}
+\section{Related work}
     \label{sec:related_work}
 
 	Nothing in the literature that addresses the estimation of the Lightning
@@ -33,3 +34,17 @@ This thesis aim to address following three questions:
 	nephew rewards would affect mining strategies\cite{niu:feng:selfish:mining:ethereum}.
 	
 	
+\section{Structure}
+
+This thesis is divided into 8 chapters, including this one. The first four chapters gives a wide overview of Bitcoin, the Lightning Network. Chapters 6 and 7 aims to answer the thesis question by constructing, evaluating and simulating routing policies. The last chapter 8 discusses the result,  conclusions are drawn and elaborating on future work.
+
+\begin{enumerate}
+	\item \textbf{Introduction}: This chapter introduces the thesis.
+	\item \textbf{Macroeconomics}:
+	\item \textbf{The Bitcoin Network}
+	\item \textbf{Scaling Bitcoin}
+	\item \textbf{The Lightning Network}
+	\item \textbf{Evaluation}
+	\item \textbf{Results}
+	\item \textbf{Discussion \& Conclusions}
+\end{enumerate}
