major refactor of structure, rm java sim start, more on pyth sim

--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -9,7 +9,13 @@ With the eventual growth of the Lightning Network a fee market for channel liqui
 
 \section{Fee as a competitive equilibrium}
 
+The
 
+The conventional long run demand and supply curve apply to the fee market.
+
+If a demand is running DD' and Supply SS' and
+
+Suppose the average fee price is set at $F_{1}$ with demand $F_{1}D_{1}$ and supply $F_{1}S_{1}$.
 
 \begin{figure}[!htb]
 	\hspace*{-0.7cm} 
